# ckanext-temabaru

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
ckanext/temabaru/: cli.py  helpers.py  plugin.py  views.py
ckanext/temabaru/assets/: script.js  webassets.yml
ckanext/temabaru/fanstatic/css/: custom.css
ckanext/temabaru/lib/: helpers.py
ckanext/temabaru/logic/: action.py  auth.py  schema.py  validators.py
ckanext/temabaru/plugins/: __init__.py  base.py  blanket.py  core.py  interfaces.py  toolkit.py  toolkit_sphinx_extension.py
ckanext/temabaru/public/css/: dataset.css  main.css
ckanext/temabaru/templates/: base.html  error_document_template.html  footer.html  header.html  page.html
ckanext/temabaru/templates/admin/: base.html  config.html  confirm_reset.html  index.html  trash.html
ckanext/temabaru/templates/asta-cita-presiden/: index.html
ckanext/temabaru/templates/berita/: index.html
ckanext/temabaru/templates/group/: index.html
ckanext/temabaru/templates/home/: about.html  index.html
ckanext/temabaru/templates/organization/: index.html  new.html
ckanext/temabaru/templates/package/: base.html  new.html  read.html  read_base.html  search.html
ckanext/temabaru/templates/program-unggulan-bupati/: index.html
ckanext/temabaru/templates/regulasi/: index.html
ckanext/temabaru/templates/snippets/: facet_list.html  follow_button.html  license.html  package_item.html  package_list.html  (+1 more)
ckanext/temabaru/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext_temabaru.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
(+39 files in other folders)
